--- a/index.html
+++ b/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guía Básica para Plantófilos</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+
+<header>
+    <h1>Guía Básica para Plantófilos</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgcLiKijP7O1YExfN0_hSUas0CXoYJ9dxRMQ&s" alt="Muñequito queriendo comprar mas plantas">
+</header>
+
+<main>
+    <section>
+        <h2>Introducción</h2>
+        <p>Bienvenido a la guía esencial para cualquier entusiasta de las plantas. Aquí encontrarás información útil sobre cómo comenzar y mantener una colección de plantas saludables y hermosas. Ya seas nuevo en el mundo de la jardinería o un experimentado plantófilo, esta guía te ayudará a mejorar tus conocimientos y a cuidar mejor de tus plantas.</p>
+   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfi8CkCESmnq3NLKhz3F4AYzQVmwc1XAx0XQ&s" alt="frase chistosa de plantas">
+    </section>
+
+    <section>
+        <h2>Cosas que debes saber antes de comprar plantas</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8IBAh0AMPWBhinrOZZvKqXAusRAAD6lrgAA&s" alt="planta descuida vas planta cuidada">
+        <ul>
+            <li><strong>Luz:</strong> Algunas plantas necesitan luz directa, mientras que otras prefieren luz indirecta o sombra. Conoce las necesidades de luz de cada planta antes de elegirla.</li>
+            <li><strong>Riego:</strong> No todas las plantas necesitan la misma cantidad de agua. Algunas prefieren que el suelo se seque entre riegos, mientras que otras necesitan mantener el suelo húmedo.</li>
+            <li><strong>Tipo de suelo:</strong> Asegúrate de tener el sustrato adecuado. Algunas plantas requieren suelos bien drenados, mientras que otras prefieren un sustrato más húmedo.</li>
+            <li><strong>Humedad:</strong> Muchas plantas de interior tropicales prosperan en ambientes húmedos. Considera usar un humidificador o rociar agua alrededor de las plantas que lo necesiten.</li>
+            <li><strong>Macetas y drenaje:</strong> Utiliza macetas con buen drenaje para evitar que el exceso de agua cause pudrición de las raíces.</li>
+        </ul>
+    </section>
+
+    <section>
+        <h2>Plantas Recomendadas para Comenzar</h2>
+        <p>Si eres nuevo en el mundo de las plantas, aquí tienes algunas opciones fáciles de cuidar:</p>
+        <ul>
+            <li><strong>Sansevieria (Lengua de suegra):</strong> Resistente y fácil de mantener. Tolera poca luz y no necesita mucho riego.</li>
+            <li><strong>Pothos:</strong> Ideal para principiantes, crece en diversas condiciones y es muy tolerante al riego irregular.</li>
+            <li><strong>Monstera deliciosa:</strong> Una planta popular con hojas grandes y llamativas. Necesita luz indirecta y riego moderado.</li>
+            <li><strong>Calathea:</strong> Atractiva por sus hojas coloridas, pero requiere más humedad. Ideal para interiores.</li>
+            <li><strong>Helechos:</strong> Necesitan humedad y sombra parcial, pero son ideales para crear un ambiente verde y frondoso.</li>
+        </ul>
+    </section>
+</main>
+
+<footer>
+    <p>&copy; 2024 Guía para Plantófilos | Todo sobre plantas</p>
+</footer>
+
 </body>
 </html>
