--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li><strong>Humedad:</strong> Muchas plantas de interior tropicales prosperan en ambientes húmedos. Considera usar un humidificador o rociar agua alrededor de las plantas que lo necesiten.</li>
             <li><strong>Macetas y drenaje:</strong> Utiliza macetas con buen drenaje para evitar que el exceso de agua cause pudrición de las raíces.</li>
         </ul>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/a7IE-sh3Ch4?si=tn_WzL6dSM-5CZzJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
 
     <section>
