--- a/index.html
+++ b/index.html
@@ -4,24 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guía Básica para Plantófilos</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <header>
     <h1>Guía Básica para Plantófilos</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgcLiKijP7O1YExfN0_hSUas0CXoYJ9dxRMQ&s" alt="Muñequito queriendo comprar mas plantas">
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgcLiKijP7O1YExfN0_hSUas0CXoYJ9dxRMQ&s" alt="Muñequito queriendo comprar más plantas">
 </header>
+
+<nav>
+    <ul>
+        <li><a href="huerta.html">Huerta Sustentable</a></li>
+        <li><a href="siembra.html">Tipo de Siembra por Temporada</a></li>
+        <li><a href="compostaje.html">Compostaje</a></li>
+        <li><a href="semilla.html">De la Semilla al Fruto</a></li>
+    </ul>
+</nav>
 
 <main>
     <section>
         <h2>Introducción</h2>
         <p>Bienvenido a la guía esencial para cualquier entusiasta de las plantas. Aquí encontrarás información útil sobre cómo comenzar y mantener una colección de plantas saludables y hermosas. Ya seas nuevo en el mundo de la jardinería o un experimentado plantófilo, esta guía te ayudará a mejorar tus conocimientos y a cuidar mejor de tus plantas.</p>
-   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfi8CkCESmnq3NLKhz3F4AYzQVmwc1XAx0XQ&s" alt="frase chistosa de plantas">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfi8CkCESmnq3NLKhz3F4AYzQVmwc1XAx0XQ&s" alt="Frase chistosa de plantas">
     </section>
 
     <section>
         <h2>Cosas que debes saber antes de comprar plantas</h2>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8IBAh0AMPWBhinrOZZvKqXAusRAAD6lrgAA&s" alt="planta descuida vas planta cuidada">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8IBAh0AMPWBhinrOZZvKqXAusRAAD6lrgAA&s" alt="Planta descuidada vs planta cuidada">
         <ul>
             <li><strong>Luz:</strong> Algunas plantas necesitan luz directa, mientras que otras prefieren luz indirecta o sombra. Conoce las necesidades de luz de cada planta antes de elegirla.</li>
             <li><strong>Riego:</strong> No todas las plantas necesitan la misma cantidad de agua. Algunas prefieren que el suelo se seque entre riegos, mientras que otras necesitan mantener el suelo húmedo.</li>
@@ -51,3 +61,4 @@
 
 </body>
 </html>
+
