--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
 
 <header>
-    <h1>Guía Básica para Plantófilos</h1>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgcLiKijP7O1YExfN0_hSUas0CXoYJ9dxRMQ&s" alt="Muñequito queriendo comprar más plantas">
+    <div class="header-content">
+        <h1>Guía Básica para Plantófilos</h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRgcLiKijP7O1YExfN0_hSUas0CXoYJ9dxRMQ&s" alt="Muñequito queriendo comprar más plantas">
+    </div>
 </header>
 
 <nav>
@@ -23,13 +25,13 @@
 </nav>
 
 <main>
-    <section>
-        <h2>Introducción</h2>
+    <section class="bienvenida">
+        <h2>¡Bienvenido!</h2>
         <p>Bienvenido a la guía esencial para cualquier entusiasta de las plantas. Aquí encontrarás información útil sobre cómo comenzar y mantener una colección de plantas saludables y hermosas. Ya seas nuevo en el mundo de la jardinería o un experimentado plantófilo, esta guía te ayudará a mejorar tus conocimientos y a cuidar mejor de tus plantas.</p>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfi8CkCESmnq3NLKhz3F4AYzQVmwc1XAx0XQ&s" alt="Frase chistosa de plantas">
     </section>
 
-    <section>
+    <section class="consejos">
         <h2>Cosas que debes saber antes de comprar plantas</h2>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ8IBAh0AMPWBhinrOZZvKqXAusRAAD6lrgAA&s" alt="Planta descuidada vs planta cuidada">
         <ul>
@@ -39,10 +41,10 @@
             <li><strong>Humedad:</strong> Muchas plantas de interior tropicales prosperan en ambientes húmedos. Considera usar un humidificador o rociar agua alrededor de las plantas que lo necesiten.</li>
             <li><strong>Macetas y drenaje:</strong> Utiliza macetas con buen drenaje para evitar que el exceso de agua cause pudrición de las raíces.</li>
         </ul>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/a7IE-sh3Ch4?si=tn_WzL6dSM-5CZzJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        
     </section>
 
-    <section>
+    <section class="recomendaciones">
         <h2>Plantas Recomendadas para Comenzar</h2>
         <p>Si eres nuevo en el mundo de las plantas, aquí tienes algunas opciones fáciles de cuidar:</p>
         <ul>
@@ -61,4 +63,3 @@
 
 </body>
 </html>
-
