--- a/huerta.html
+++ b/huerta.html
@@ -22,6 +22,98 @@
 </nav>
 
 <main>
+    <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Huerto Sustentable</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+<header>
+    <h1>Huerto Sustentable</h1>
+</header>
+
+<nav>
+    <ul>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="huerta.html">Huerta Sustentable</a></li>
+        <li><a href="siembra.html">cultivo por Temporada</a></li>
+        <li><a href="compostaje.html">Compostaje</a></li>
+        <li><a href="estolones.html">Propagacion por estolones</a></li>
+        <li><a href="semilla.html">Propagacion por semillas</a></li>
+        <li><a href="planfacil.html">plantas faciles de cuidar</a></li>
+    </ul>
+</nav>
+
+<main>
+    <section>
+        <h2>Cómo Crear un Huerto Sustentable de Manera Muy Económica</h2>
+        <p>Crear un huerto sustentable no requiere una gran inversión. Aquí te presentamos algunas ideas económicas y ecológicas para comenzar:</p>
+        <div class="cards-container">
+            <div class="tarjeta">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.njxkYZqW8RbPTvTjo4XTUQHaEK&pid=Api&P=0" alt="Macetas Recicladas">
+                <div class="contenedor-tarjeta">
+                    <h3>Macetas Recicladas</h3>
+                    <p>Usa cajas de madera o envases de plástico como macetas.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.O3LlBmoPWBWl5JXx8VcBdAHaE8&pid=Api&P=0" alt="Compost Casero">
+                <div class="contenedor-tarjeta">
+                    <h3>Compost Casero</h3>
+                    <p>Aprovecha restos de frutas y verduras para nutrir tus plantas.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.-bLBiZ2w2M9BRnDHyeov5QHaFj&pid=Api&P=0" alt="Riego Sostenible">
+                <div class="contenedor-tarjeta">
+                    <h3>Riego Sostenible</h3>
+                    <p>Reutiliza agua de lluvia o agua de vegetales.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Plantas Recomendadas para Iniciar tu Huerto Sustentable</h2>
+        <div class="cards-container">
+            <div class="tarjeta">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.qp97mHZMs-IBoAkPRo7gIQHaE8&pid=Api&P=0" alt="Lechuga">
+                <div class="contenedor-tarjeta">
+                    <h3>Lechuga</h3>
+                    <p>Crece rápido y es perfecta para espacios pequeños.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.uYTL6-P9edn1Oiw_TItf6gHaFj&pid=Api&P=0" alt="Rábanos">
+                <div class="contenedor-tarjeta">
+                    <h3>Rábanos</h3>
+                    <p>Ideales para principiantes, crecen en poco tiempo.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.iCzwvqfPmlCBiJo7Q0RQ1gHaE8&pid=Api&P=0" alt="Tomates Cherry">
+                <div class="contenedor-tarjeta">
+                    <h3>Tomates Cherry</h3>
+                    <p>Fáciles de cultivar y perfectos para macetas.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <h2>Beneficios de un Huerto Sustentable</h2>
+        <ul>
+            <li>Reduces el uso de plásticos y el transporte de alimentos.</li>
+            <li>Obtienes alimentos frescos y saludables directamente desde tu hogar.</li>
+            <li>Disminuyes residuos orgánicos al reutilizarlos.</li>
+            <li>Es una actividad relajante y educativa para toda la familia.</li>
+        </ul>
+    </section>
+
     <section>
         <h2>Cómo Crear un Huerto Sustentable de Manera Muy Económica</h2>
         <p>Crear un huerto sustentable no requiere una gran inversión. Aquí te presentamos algunas ideas económicas y ecológicas para comenzar:</p>
@@ -31,30 +123,6 @@
             <li><strong>Reutiliza el agua:</strong> Utiliza agua de lluvia o el agua que sobra de lavar verduras para regar tu huerto.</li>
             <li><strong>Elige semillas de bajo coste:</strong> Muchas semillas pueden obtenerse de frutas y verduras que ya consumes en casa, como tomates, pimientos o calabazas.</li>
             <li><strong>Crea tu propio sustrato:</strong> Mezcla tierra de tu jardín con compost casero y arena para mejorar el drenaje.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Plantas Recomendadas para Iniciar tu Huerto Sustentable</h2>
-        <p>Si eres principiante, estas plantas son ideales para empezar debido a su resistencia y bajo mantenimiento:</p>
-        <ul>
-            <li><strong>Lechuga:</strong> Fácil de cultivar en espacios pequeños y lista para cosechar en pocas semanas.</li>
-            <li><strong>Rábanos:</strong> Crecen rápido y no requieren mucho espacio.</li>
-            <li><strong>Tomates cherry:</strong> Son resistentes y perfectos para macetas o balcones soleados.</li>
-            <li><strong>Hierbas aromáticas:</strong> Como albahaca, cilantro y perejil, son fáciles de cuidar y útiles en la cocina.</li>
-            <li><strong>Calabacín:</strong> Produce abundantes frutos y se adapta bien a diferentes tipos de suelo.</li>
-            <li><strong>Espinacas:</strong> Crecen rápido y toleran sombra parcial.</li>
-        </ul>
-    </section>
-
-    <section>
-        <h2>Beneficios de un Huerto Sustentable</h2>
-        <p>Además de ahorrar dinero, un huerto sustentable tiene múltiples beneficios:</p>
-        <ul>
-            <li>Contribuye al cuidado del medio ambiente al reducir el uso de plásticos y transporte de alimentos.</li>
-            <li>Proporciona alimentos frescos y saludables directamente desde tu hogar.</li>
-            <li>Te ayuda a reducir residuos al reutilizar restos orgánicos.</li>
-            <li>Es una actividad relajante y educativa para toda la familia.</li>
         </ul>
     </section>
 </main>
