--- a/semilla.html
+++ b/semilla.html
@@ -16,8 +16,11 @@
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="huerta.html">Huerta Sustentable</a></li>
-        <li><a href="siembra.html">Siembra por Temporada</a></li>
+        <li><a href="siembra.html">cultivo por Temporada</a></li>
         <li><a href="compostaje.html">Compostaje</a></li>
+        <li><a href="estolones.html">Propagacion por estolones</a></li>
+        <li><a href="semilla.html">Propagacion por semillas</a></li>
+        <li><a href="planfacil.html">plantas faciles de cuidar</a></li>
     </ul>
 </nav>
 
@@ -30,14 +33,45 @@
     <section>
         <h2>Extracción de Semillas Comunes</h2>
         <p>Aquí te mostramos cómo sacar semillas de los alimentos más comunes:</p>
-        <ul>
-            <li><strong>Tomates:</strong> Corta un tomate maduro por la mitad, saca las semillas con una cuchara, lávalas y déjalas secar en papel absorbente por 3-4 días antes de sembrarlas.</li>
-            <li><strong>Pimientos y chiles:</strong> Abre el fruto, extrae las semillas y colócalas en un lugar seco y oscuro durante unos días.</li>
-            <li><strong>Calabazas:</strong> Lava las semillas para eliminar restos de pulpa, sécalas completamente y guárdalas hasta la siembra.</li>
-            <li><strong>Limones y naranjas:</strong> Extrae las semillas de la fruta, lávalas bien y plántalas directamente en macetas pequeñas con tierra húmeda.</li>
-            <li><strong>Aguacates:</strong> Lava el hueso, colócalo en agua suspendido con palillos para que la parte inferior quede sumergida. Espera a que germine y forme raíces antes de plantarlo en tierra.</li>
-        </ul>
+        <div class="cards-container">
+            <div class="tarjeta">
+                <img src="https://tse1.explicit.bing.net/th?id=OIP.Y6m4MQuyJWFtzVsBxKogjAHaE6&pid=Api&P=0&h=180" alt="Tomates">
+                <div class="contenedor-tarjeta">
+                    <h3>Tomates</h3>
+                    <p>Corta un tomate maduro por la mitad, saca las semillas con una cuchara, lávalas y déjalas secar en papel absorbente por 3-4 días antes de sembrarlas.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://tse2.mm.bing.net/th?id=OIP.ZOVMMo8ZGfhsC6IkLkDWWgHaE8&pid=Api&P=0&h=180" alt="Pimientos y chiles">
+                <div class="contenedor-tarjeta">
+                    <h3>Pimientos y chiles</h3>
+                    <p>Abre el fruto, extrae las semillas y colócalas en un lugar seco y oscuro durante unos días.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://tse3.mm.bing.net/th?id=OIP.DumUGM74cGmc-s-Pel11BwHaFj&pid=Api&P=0&h=180" alt="Calabazas">
+                <div class="contenedor-tarjeta">
+                    <h3>Calabazas</h3>
+                    <p>Lava las semillas para eliminar restos de pulpa, sécalas completamente y guárdalas hasta la siembra.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://images.fineartamerica.com/images/artworkimages/mediumlarge/2/orange-lemon-and-lime-citrus-fruit-milleflore-images.jpg" alt="Limones y naranjas">
+                <div class="contenedor-tarjeta">
+                    <h3>Limones y naranjas</h3>
+                    <p>Extrae las semillas de la fruta, lávalas bien y plántalas directamente en macetas pequeñas con tierra húmeda.</p>
+                </div>
+            </div>
+            <div class="tarjeta">
+                <img src="https://www.laprensagrafica.com/__export/1512405124879/sites/prensagrafica/img/2017/12/04/aguacate_beneficios_1.jpg_1855153753.jpg" alt="Aguacates">
+                <div class="contenedor-tarjeta">
+                    <h3>Aguacates</h3>
+                    <p>Lava el hueso, colócalo en agua suspendido con palillos para que la parte inferior quede sumergida. Espera a que germine y forme raíces antes de plantarlo en tierra.</p>
+                </div>
+            </div>
+        </div>
     </section>
+    
 
     <section>
         <h2>Semillas que Puedes Germinar Fácilmente</h2>
@@ -89,3 +123,4 @@
 
 </body>
 </html>
+
