--- a/siembra.html
+++ b/siembra.html
@@ -16,11 +16,13 @@
     <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="huerta.html">Huerta Sustentable</a></li>
+        <li><a href="siembra.html">cultivo por Temporada</a></li>
         <li><a href="compostaje.html">Compostaje</a></li>
-        <li><a href="semilla.html">De la Semilla al Fruto</a></li>
+        <li><a href="estolones.html">Propagacion por estolones</a></li>
+        <li><a href="semilla.html">Propagacion por semillas</a></li>
+        <li><a href="planfacil.html">plantas faciles de cuidar</a></li>
     </ul>
 </nav>
-
 <main>
     <section>
         <h2>Primavera</h2>
@@ -153,4 +155,5 @@
 
 </body>
 </html>
+
 
