--- a/planfacil.html
+++ b/planfacil.html
@@ -14,11 +14,11 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="huerta.html">Huerta Sustentable</a></li>
-            <li><a href="siembra.html">cultivo por Temporada</a></li>
+            <li><a href="siembra.html">Cultivo por Temporada</a></li>
             <li><a href="compostaje.html">Compostaje</a></li>
             <li><a href="estolones.html">Propagacion por estolones</a></li>
             <li><a href="semilla.html">Propagacion por semillas</a></li>
-            <li><a href="planfacil.html">plantas faciles de cuidar</a></li>
+            <li><a href="planfacil.html">Plantas Faciles para Comenzar</a></li>
         </ul>
     </nav>
     <main>
