--- a/siembra.html
+++ b/siembra.html
@@ -10,19 +10,21 @@
 
 <header>
     <h1>Siembra por Temporada en el Centro de México</h1>
+<button class="menu-toggle" id="menuToggle" aria-label="Abrir menú">
+    ☰
+  </button>
 </header>
 
-<nav>
-    <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="huerta.html">Huerta Sustentable</a></li>
-        <li><a href="siembra.html">cultivo por Temporada</a></li>
-        <li><a href="compostaje.html">Compostaje</a></li>
-        <li><a href="estolones.html">Propagacion por estolones</a></li>
-        <li><a href="semilla.html">Propagacion por semillas</a></li>
-        <li><a href="planfacil.html">plantas faciles de cuidar</a></li>
-    </ul>
-</nav>
+<nav id="menu" class="menu">
+    <a href="./index.html">Inicio</a>
+    <a href="./huerta.html">Huerta Sustentable</a>
+    <a href="./siembra.html">Cultivo por Temporada</a>
+    <a href="./compostaje.html">Compostaje</a>
+    <a href="./estolones.html">Propagación por Estolones</a>
+    <a href="./semilla.html">Propagación por Semillas</a>
+    <a href="./planfacil.html">Plantas Fáciles de Cuidar</a>
+  </nav>
+
 <main>
     <section>
         <h2>Primavera</h2>
@@ -152,8 +154,7 @@
 <footer>
     <p>&copy; 2024 Guía para Plantófilos | Todo sobre plantas</p>
 </footer>
-
+<script src="script.js"></script> 
 </body>
 </html>
-
 
