--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <p>Aprende sobre tecnicas para crear tu huerto.</p>
                     <button onclick="window.location.href='huerta.html'">Saber Más</button>
                 </div>
+            </div>    
         </div>
     </div>
 
